# applicatives

./: LICENSE  README.md  TODO  applicatives.cabal
src/: CompileTests.hs  Example.hs  FamilyCompose.hs
src/Control/Applicative/: Compose.hs  Error.hs  IO.hs  Reader.hs  Stacks.hs  With.hs  Writer.hs
src/Data/Functor/Compose/: Where.hs
