name:                applicatives
version:             0.1.0.0
synopsis:            MTL-style applicative 'transformers'
-- description:
license:             BSD3
license-file:        LICENSE
author:              Nick Partridge
maintainer:          Nick Partridge <nkpart@gmail.com>
copyright:           Copyright (C) 2015 Nick Partridge
homepage:            http://github.com/nkpart/applicatives
bug-reports:         http://github.com/nkpart/applicatives
category:            Control
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Control.Applicative.Reader
    -- Control.Applicative.Error
    Control.Applicative.IO
    Control.Applicative.With

    Data.Functor.Compose.Where
    -- Control.Applicative.Compose

  other-modules:
    CompileTests
    FamilyCompose
  build-depends:       base >=4.7 && <4.8
                     , semigroups
                     , validation
                     , transformers
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite tests
  build-depends: base, applicatives
  type: exitcode-stdio-1.0
  main-is: Tests.hs
